--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,8 +10,8 @@ body:
     id: bug-description
     attributes:
       label: Describe the bug
-      placeholder: Bug description...
-      description: Please provide a concise description of the bug you are experiencing.
+      description: A clear and concise description of what the bug is. If you intend to submit a PR for this issue, tell us in the description. Thanks!
+      placeholder: Bug description
     validations:
       required: true
   - type: textarea
