--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -54,7 +54,7 @@ body:
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue you agree to follow our [Code of Conduct](/CODE_OF_CONDUCT.md).
+      description: By submitting this issue you agree to follow our [Code of Conduct](https://github.com/f3ve/.github/blob/main/CODE_OF_CONDUCT.md).
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
@@ -62,7 +62,7 @@ body:
     id: contributions-guide
     attributes:
       label: Contribution Guide
-      description: Before submitting this issue, please read our [Contribution Guide](/CONTRIBUTING.md).
+      description: Before submitting this issue, please read our [Contribution Guide](https://github.com/f3ve/.github/blob/main/CONTRIBUTING.md).
       options:
         - label: I have read the Contributing Guide
           required: true
