--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -69,7 +69,7 @@ body:
   - type: checkboxes
     id: validations
     attributes:
-      label: Validation Steps.
+      label: Validation Steps
       description: Before submitting this issue, ensure you have completed all the steps below.
       options:
         - label: I confirm this is a bug and not a request for support or Q&A.
