--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature proposal
-about: Propose a new feature
+description: Propose a new feature
 labels: ['enhancement']
 body:
   - type: markdown
